--- a/src/main/resources/front/styles/login.css
+++ b/src/main/resources/front/styles/login.css
@@ -13,7 +13,7 @@
 
 #login .divContainer {
   width: 356rem;
-  height: 128rem;
+  /*height: 128rem;*/
   opacity: 1;
   background: #ffffff;
   border-radius: 6rem;
