--- a/src/main/resources/front/styles/main.css
+++ b/src/main/resources/front/styles/main.css
@@ -6,7 +6,7 @@
 }
 
 #main .divHead {
-  background: url(../images/mainBg.png);
+  /*background: url(../images/mainBg.png);*/
   background-repeat: no-repeat;
   height: 152rem;
   background-size: contain;
